--- a/src/components/RecentCar.css
+++ b/src/components/RecentCar.css
@@ -5,7 +5,7 @@
 
 .collections {
     padding: 2rem 4rem;
-    margin: 2rem 2rem;
+    margin: 2rem 0;
     width: 100%;
 }
 
@@ -52,16 +52,17 @@
     padding: 10px;
 }
 
-.main-cards {
+.recent-car {
     display: flex;
-    gap: 10px;
-    position: relative;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 20px;
 }
 
-.car-card {
+.cars-card {
     display: flex;
     flex-direction: row;
-    gap: 15px;
+    gap: 50px;
 }
 
 .card {
@@ -72,7 +73,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     border-radius: 5px;
-    width: 350px;
+    width: 400px;
 }
 
 .card-arrows {
@@ -249,6 +250,14 @@
     cursor: pointer;
     padding-left: 20px;
     gap: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.more {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
 .views:hover {
@@ -265,6 +274,12 @@
 
 .view-more span:hover {
     color: orange;
+}
+
+.brand-logo {
+    width: 60px;
+    height: auto;
+    margin-left: 10px;
 }
 
 .category {
@@ -327,14 +342,9 @@
     }
 
     .header-collections h1 {
-        padding-left: 0;
-        width: 300px;
-    }
-
-    .collections {
-        width: 100%;
-        margin: 2rem 0;
-        padding: 2rem 4rem;
+        padding-left: 10px;
+        width: 400px;
+        height: auto;
     }
 
     .collections h3 {
@@ -343,10 +353,10 @@
 
     .links {
         flex-direction: row;
-        align-items: flex-start;
-        justify-content: center;
         margin-top: 1rem;
+        width: 350px;
         gap: 10px;
+        margin-right: 10px;
     }
 
     .links a {
@@ -354,12 +364,19 @@
         margin-bottom: 0.5rem;
     }
 
-    .main-cards {
+    .recent-car {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .cars-card {
+        display: flex;
         flex-direction: column;
     }
 
     .card {
         width: 100%;
+
     }
 
     .img-card {
