--- a/src/components/TopRated.css
+++ b/src/components/TopRated.css
@@ -5,7 +5,7 @@
 
 .collections {
     padding: 2rem 4rem;
-    margin: 2rem 2rem;
+    margin: 2rem 0;
     width: 100%;
 }
 
@@ -15,7 +15,7 @@
     padding-left: 4rem;
 }
 
-.header-collections {
+.rated-collections {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -23,48 +23,58 @@
     /* Adjust padding as needed */
 }
 
-.header-collections h1 {
+.rated-collections h1 {
     font-size: 2.5rem;
     margin-bottom: 0.5rem;
 }
 
-.links a {
-    margin-right: 10px;
-    text-decoration: none;
-    color: black;
-    padding-left: 10px;
-}
-
-/* Add the following CSS to make the links go to the end of the div */
-.links {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.link-container {
-    border-bottom: solid 1px grey;
-    padding-bottom: 10px;
-}
-
-.links a:nth-child(1) {
-    background-color: black;
-    color: white;
+.filter {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 10px;
+    text-align: center;
 }
 
-.main-cards {
+.filter-container {
     display: flex;
-    gap: 10px;
-    position: relative;
+    align-items: center;
+    justify-content: center;
 }
 
-.car-card {
+label {
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+select {
+    padding: 8px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    background-color: #12be12;
+}
+
+/* Optional: Add some spacing between label and select for better aesthetics */
+.filter label,
+.filter select {
+    margin-bottom: 10px;
+}
+
+.recent-car {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.cars-card {
     display: flex;
     flex-direction: row;
-    gap: 15px;
+    gap: 10px;
 }
 
-.card {
+.rated-card {
     display: flex;
     flex-direction: column;
     margin-top: 20px;
@@ -249,6 +259,14 @@
     cursor: pointer;
     padding-left: 20px;
     gap: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.more {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
 .views:hover {
@@ -265,6 +283,12 @@
 
 .view-more span:hover {
     color: orange;
+}
+
+.brand-logo {
+    width: 60px;
+    height: auto;
+    margin-left: 10px;
 }
 
 .category {
@@ -318,48 +342,31 @@
     .main-collections {
         flex-direction: column;
         display: flex;
-        margin: 0;
     }
 
-    .header-collections {
+    .rated-collections {
         flex-direction: column;
         display: flex;
     }
 
-    .header-collections h1 {
-        padding-left: 0;
-        width: 300px;
+    .rated-collections h1 {
+        width: 350px;
+        height: auto;
     }
 
-    .collections {
-        width: 100%;
-        margin: 2rem 0;
-        padding: 2rem 4rem;
-    }
-
-    .collections h3 {
-        padding-left: 0;
-    }
-
-    .links {
-        flex-direction: row;
-        align-items: flex-start;
-        justify-content: center;
-        margin-top: 1rem;
-        gap: 10px;
-    }
-
-    .links a {
-        margin: 0;
-        margin-bottom: 0.5rem;
-    }
-
-    .main-cards {
+    .recent-car {
+        display: flex;
         flex-direction: column;
     }
 
-    .card {
+    .cars-card {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .rated-card {
         width: 100%;
+
     }
 
     .img-card {
