--- a/src/components/common/style.css
+++ b/src/components/common/style.css
@@ -1,24 +1,45 @@
+.swiper {
+  width: 100%;
+  height: 100%;
+}
 
-  .swiper {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-  
-    /* Center slide text vertically */
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.car-card {
+  gap: 70px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+
+}
+
+@media (max-width: 767px) {
+  .container {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    width: 350px;
   }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+
+  .card {
+    padding: 0;
   }
-  
+}
