--- a/src/components/common/style.css
+++ b/src/components/common/style.css
@@ -69,3 +69,20 @@
 .marquee-content img {
   margin-right: 20px; /* Adjust the spacing between logos as needed */
 }
+
+
+.step-label {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #007bff;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+}
+
+.completed-step {
+  background-color: #00d084; /* Change color for completed steps */
+}
