--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,4 +1,4 @@
-.modal-overlay {
+/* .modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -23,4 +23,4 @@
     right: 10px;
     font-size: 50px;
     cursor: pointer;
-}
+} */
